# aionysus-v2

./: .gitignore  CONTENT_CREATION_PLAN.md  README.md  RESTART.md  claude.md  next.config.ts  package.json  plan.md  vercel.json
agent/: pyproject.toml
agent/src/: agent.py
scripts/: add-investment-data.mjs  migrate-wines.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/cart/: page.tsx
src/app/dashboard/: page.tsx
src/app/fractional-ceo-jobs-uk/: page.tsx
src/app/fractional-cfo/: page.tsx
src/app/fractional-cfo-jobs-uk/: page.tsx
src/app/fractional-cfo-salary/: page.tsx
src/app/fractional-chro-jobs-uk/: page.tsx
src/app/fractional-ciso-jobs-uk/: page.tsx
src/app/fractional-cmo/: page.tsx
src/app/fractional-cmo-jobs-uk/: page.tsx
src/app/fractional-cmo-salary/: page.tsx
src/app/fractional-coo/: page.tsx
src/app/fractional-coo-salary/: page.tsx
src/app/fractional-cpo-jobs-uk/: page.tsx
src/app/fractional-cto/: page.tsx
src/app/fractional-cto-salary/: page.tsx
src/app/fractional-jobs-uk/: page.tsx
src/app/hire-fractional-cfo/: page.tsx
src/app/hire-fractional-cmo/: page.tsx
src/app/hire-fractional-coo/: page.tsx
src/components/: Breadcrumbs.tsx  CaseStudy.tsx  DynamicBackground.tsx  EditableGraph3D.tsx  ExpertProfile.tsx  HireProcessStepper.tsx  HotJobsLines.tsx  IR35Calculator.tsx  LazyYouTube.tsx  LiveProfileGraph.tsx  NavBar.tsx  RoleCalculator.tsx  RoleContentHub.tsx  RoleNews.tsx  ServerJobGrid.tsx  UserMenu.tsx  charts.tsx  investment.tsx  providers.tsx  voice-input.tsx
src/lib/: jobs.ts  types.ts
(+14 files in other folders)
