[project]
name = "dionysus-agent"
version = "0.1.0"
description = "DIONYSUS - AI Wine Sommelier for Aionysus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "fastapi",
    "starlette",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[groq]",
    "python-dotenv",
    "logfire>=4.10.0",
    "psycopg2-binary",
    "httpx",  # For Zep API calls
]
